# NPTFaceRecognition

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/npufacerecognition/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: RetinaFace_mobile320.rknn
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/airport/facepod/hardware/: CameraManager.java
app/src/main/java/com/example/npufacerecognition/: FaceData.java  FaceOverlayView.java  MainActivity.java
app/src/main/java/com/facepod/: FaceData.java  FaceOverlayView.java  MainActivity.java
app/src/main/java/com/facepod/hardware/: CameraManager.java
app/src/main/java/com/facepod/jni/: FaceEngine.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/npufacerecognition/: ExampleUnitTest.java
docs/: c4_1_context.md  c4_3_component.md  c4_4_code_algorithm.md  execution_flow.md  state_machine.md
gradle/wrapper/: gradle-wrapper.properties
